--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,10 +23,10 @@
   }
   img {
     display: block;
-    width: 100%;
-    height: 300px;
+    width: 115%;
+    height: 250px;
     margin: .2em auto;
-    border-radius: 20px;
+    border-radius: 50px;
     // padding: 10px;
     box-shadow: 10px 5px 10px #888888;
   }
@@ -79,7 +79,8 @@
 .img-responsive {
   max-width: 30%;
   max-height: auto;
-  margin-bottom: 10;
+  padding-top: 10px;
+  margin-bottom: 10px;
 }
 .navbar.navbar-default {
   background-color: #99ccff;
@@ -111,6 +112,9 @@
   max-width: 100%;
   max-height: auto;
   margin-bottom: 10;
+}
+.social {
+  color: black;
 }
 
 //modal modal modal
