--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,16 +2,31 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
-  // align-items: stretch;
+  align-items: stretch;
   margin: 2vw auto;
 }
+@media (max-width:520px) {
+  #products{
+    display: grid;
+    grid-template-columns: 1;
+  }
+  .prodCard{ 
+    img {
+      // display: flex;
+      width: 75px;
+      max-height: 150px;
+      margin: .2em auto;
+      border-radius: 50px;
+      // padding: 10px;
+      box-shadow:  4px 1px 4px #888888;
+    }
+  }
+}
 .prodCard {
-  height: 25em ;
-  width: 25em ;
   display: inline-block;
   margin: 2vw;
   padding: .4vw;
-  // max-width: 24vw;
+  max-width: 24vw;
   h3 {
     display: block;
     font-size: 2vw;
@@ -28,11 +43,8 @@
   }
   img {
     display: block;
-    // background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    width: 100%;
-    height: 100%;
+    width: 115%;
+    height: 250px;
     margin: .2em auto;
     border-radius: 50px;
     // padding: 10px;
